CON-704 fix font size and vertical alignmnent of links.

--- a/assets/scss/partials/_cta-link.scss
+++ b/assets/scss/partials/_cta-link.scss
@@ -4,11 +4,15 @@
     color: $brand-secondary;
     &::before {
       content: "\e911";
+      text-decoration: none;
+      padding-right: 8px;
+      vertical-align: middle;
     }
   }
 
   &__link {
     font-weight: bold;
     color: $brand-secondary;
+    font-size: 14px;
   }
 }
